Bug 79973 - LO crashes while opening the document
Summary: LO crashes while opening the document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.4.0
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2014-06-13 09:03 UTC by Priyanka Gaikwad
Modified: 2014-06-20 18:04 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
DOCX file containing equation (75.48 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-06-13 09:03 UTC, Priyanka Gaikwad
Details
bt + console logs (21.73 KB, text/plain)
2014-06-13 21:59 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Priyanka Gaikwad 2014-06-13 09:03:32 UTC
Created attachment 100967 [details]
DOCX file containing equation

Docx file containing equation
Steps to reproduce :

1) Open attached file on latest LO build.

Current behavior:
File gets crashed while opening.

Expected behavior :
LO should open file properly.
Comment 1 Jorendc 2014-06-13 09:34:38 UTC
No crash in Version: 4.4.0.0.alpha0+
Build ID: 81d2c208a4e6f9df87e2ee70c6e6da146742178a
TinderBox: MacOSX-x86@49-TDF, Branch:master, Time: 2014-06-10_23:48:34

No recenter builds available for now. Will try to reproduce when there are.
Comment 2 Julien Nabet 2014-06-13 21:59:50 UTC
Created attachment 101018 [details]
bt + console logs

On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 3 Julien Nabet 2014-06-13 22:00:26 UTC
Noel: one for you?
Comment 4 Commit Notification 2014-06-20 14:39:39 UTC
PriyankaGaikwad committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=077121eb0debc1c78cf46038e2b90a0c2f381c44

fdo#79973 : LO crashes while opening the document.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.