fdo#79973 : LO crashes while opening the document.

Description:
- If the equation ends with two dots(.) then file get crash.
- In SmParser::NextToken()
  the file get crash because string index is out of bound.

Change-Id: I5f25814220d556d53c10d4ca33a38b4d0d451438
Reviewed-on: https://gerrit.libreoffice.org/9840
Reviewed-by: Muthu Subramanian K <muthusuba@gmail.com>
Tested-by: Muthu Subramanian K <muthusuba@gmail.com>